# marrow

./: .gitignore  ARI-SPEC.md  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  STABILITY.md  THREAT-MODEL.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs-pdf.yml  docs.yml  security.yml  wheels.yml
ari-conformance/: README.md  test_ari_core.py  test_ari_embedded_runtime.py  test_ari_embedded_structural.py  test_ari_persistence.py
benchmarks/: README.md  __init__.py  _harness.py  compare_langgraph.py  e2e.py  micro.py  run.py
docs/: architecture.md  ari-rfc-process.md  ari-strategy.md  benchmarks.md  design-notes.md  getting-started.md  index.md  market-research.md  stability.md
docs/api/: agentcore.md  marrow.md  providers.md
docs/concepts/: agents.md  async.md  graphs.md  observability.md  persistence.md  providers.md  tools.md
docs/pitch/: agentcore-deck.md  marrow-deck.md  one-pager.md
examples/: anthropic_example.py  async_example.py  graph_example.py  main.py  openai_example.py  streaming_example.py  tools_example.py
examples/apps/research_agent/: README.md  __main__.py
examples/embed_cpp/: CMakeLists.txt  README.md  main.cpp
python/agentcore/: __init__.py  asyncio_bridge.py  graph.py  logging_config.py  policy.py  sdk.py  state_store.py  tools.py  tracing.py
python/agentcore/providers/: __init__.py  anthropic.py  ollama.py  openai.py
python/marrow/: __init__.py  asyncio_bridge.py  graph.py  logging_config.py  policy.py  sdk.py  state_store.py  tools.py  tracing.py  usage.py
python/marrow/providers/: __init__.py  anthropic.py  ollama.py  openai.py
scripts/: render-pdfs.sh
src/bindings/: bindings.cpp
src/core/: engine.cpp  engine.hpp
tests/: test_concurrency.py  test_policy.py  test_primitives.py  test_router.py  test_security.py  test_smoke.py  test_state_store.py  test_streaming.py  test_tools.py  test_tracing_usage.py
