[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "agentcore"
version = "0.0.3"
description = "Lightweight C++ core for AI agent orchestration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "agentcore contributors"}]
keywords = ["agents", "llm", "orchestration", "cpp", "pybind11"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = ["pytest>=8.4.2"]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.40"]
ollama = ["httpx>=0.27"]
all = ["openai>=1.40", "anthropic>=0.40", "httpx>=0.27"]

[project.urls]
Source = "https://github.com/bencrooks-dev/agentcore"
Issues = "https://github.com/bencrooks-dev/agentcore/issues"

[tool.scikit-build]
wheel.packages = ["python/agentcore"]
cmake.version = ">=3.18"
build-dir = "build/{wheel_tag}"
