[build-system]
requires = ["scikit-build-core>=0.12.2", "pybind11>=3.0.4"]
build-backend = "scikit_build_core.build"

[project]
name = "agentcore"
version = "0.1.0"
description = "Lightweight C++ core for AI agent orchestration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "agentcore contributors"}]
keywords = ["agents", "llm", "orchestration", "cpp", "pybind11"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = ["pytest>=8.4.2", "pytest-cov>=4"]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.104.1"]
ollama = ["httpx>=0.28.1"]
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
all = [
  "openai>=1.40",
  "anthropic>=0.104.1",
  "httpx>=0.28.1",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
]
bench = ["langgraph>=0.2", "langchain-core>=0.3"]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
  "mkdocs-gen-files>=0.5",
]

[project.urls]
Source = "https://github.com/bencrooks-dev/agentcore"
Issues = "https://github.com/bencrooks-dev/agentcore/issues"

[tool.scikit-build]
wheel.packages = ["python/agentcore"]
cmake.version = ">=3.18"
build-dir = "build/{wheel_tag}"
